--- a/api.css
+++ b/api.css
@@ -1,43 +1,48 @@
 body {
+    background-attachment: fixed;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px 0 0;
     display: flex;
-    background-repeat: no-repeat;
-    background-size: cover;
     flex-direction: column;
     align-items: center;
-    /* height: 100vh;
-    width: 100vh; */
-    margin: 0;
-    padding: 20px;
-    background-image: url('https://assets.promptbase.com/DALLE_IMAGES%2Fal4jVqSr4AaTxaaTG8IeLgBz3US2%2Fresized%2F1700421599298s_800x800.webp?alt=media&token=31766b0f-abf8-4438-a349-17470205a121');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('https://images2.alphacoders.com/135/1351279.png');
     font-family: Verdana, Tahoma, sans-serif;
 }
 
 header {
-    background-color: #2b2b2b;
+    width: 100%;
+    height: 70px;
+    background-color: #000000c0;
     color: #ebebeb;
     text-align: center;
-    padding: 40px 20px;
-    border: 4px solid #1c1c1c;
-    width: 100vh;
-    min-width: 720px;
+    padding: 20px 0;
 }
 
 header h1 {
-    font-size: 3em;
-    font-weight: 700;
+    font-size: 1.5em;
+    font-weight: 400;
     margin: 0;
 }
 
 header p {
-    font-size: 1.5em;
-    margin-top: 10px;
-    font-weight: 300;
+    font-size: 1em;
+}
+
+main {
+    padding-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #card {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 60%;
     max-width: 720px;
     margin: 20px 0;
 }
@@ -51,32 +56,29 @@ header p {
     font-weight: bold;
     color: #333;
     text-align: center;
-    background-color: #eedfeb;
+    background-color: #ffffffbb;
     border-radius: 30px;
     padding: 10px;
 }
-
 
 #pokemon {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
     padding: 20px;
-    width: 100vh;
+    width: 70vw;
 }
 
 #pokemon div:hover {
-    background-color: #fad5e8;
+    background-color: #e0fff8;
     transform: scale(1.03);
 }
 
 #pokemon div {
     text-align: center;
     padding: 10px;
-    border: solid #1c1c1c;
-    background-color: #eedfeb;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px #0000001a;
+    background-color: #ffffffbb;
+    border-radius: 10px;
 }
 
 #pokemon img {
@@ -93,13 +95,11 @@ header p {
 }
 
 footer {
-    background-color: #2b2b2b;
+    background-color: #000000c0;
     color: #ebebeb;
     text-align: center;
-    padding: 40px 20px;
-    border: 4px solid #1c1c1c;
-    width: 100vh;
-    min-width: 720px;
+    width: 100%;
+    padding: 20px 0;
 }
 
 footer p {
@@ -111,16 +111,19 @@ button {
     color: #fff;
     border: none;
     margin: 5px;
-    background-color: #333;
+    background-color: #222222e9;
     font-size: 15px;
     padding: 10px;
     border-radius: 8px;
     font-weight: bold;
+    border: solid #222222e9;
 }
 
 button:hover {
-    background-color: #4a4a4a;
+    color: #222222e9;
+    background-color: #ffffffdd;
     transform: scale(1.05);
+    border: solid #222222e9;
 }
 
 select {
@@ -128,23 +131,24 @@ select {
     width: 300px;
     padding: 8px;
     border: 1px solid #000000;
-    border-radius: 4px;
-    background-color: #eedfeb;
+    border-radius: 10px;
+    background-color: #f6e7f3;
     color: #333;
     font-weight: bold;
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     cursor: pointer;
 }
-    
+
 select:focus {
-    border-color: #333;
+    border-color: #282828;
     outline: none;
 }
 
 #descricao {
     color: white;
     width: 500px;
-    background-color: #1c1c1c;
+    background-color: #000000ce;
     border-radius: 30px;
 }
+
